--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Maciej</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
+  <link rel="stylesheet" href="lmp.css" />
+  <script src="advajax.js"></script>
+  <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
+  <script src="leaflet-measure-path.js"></script>
+  <link rel="stylesheet" href="map.css"/>
+  <script src="map.js"> </script>
+</head>
+
+<body onload="load()">
+  <form class="form-inline">
+    <div style="padding-bottom:2px"><b>Podaj identyfikator szukanej działki</b></div>
+    <input type="text" id="pole_szukaj_dzialki" size="36" style="font-size:0.92em;font-family:tahoma;"
+      value="146513_8.0821.46" onkeyup="this.value;onkeyszukajdzialki(event)" /><input type="button"
+      onclick="szukajDzialkiNew()" value="Szukaj" />
+  </form>
+  <div id="wyniki"></div>
+  <div id="mapa"></div>
+</body>
+</html>
