--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>Maciej</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
-  <link rel="stylesheet" href="lmp.css" />
-  <script src="advajax.js"></script>
+  <link rel="stylesheet" href="lmp-min.css" />
+  <script src="advajax-min.js"></script>
   <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-  <script src="leaflet-measure-path.js"></script>
-  <link rel="stylesheet" href="map.css"/>
-  <script src="map.js"> </script>
+  <script src="leaflet-measure-path-min.js"></script>
+  <link rel="stylesheet" href="map-min.css"/>
+  <script src="map-min.js"> </script>
 </head>
 
 <body onload="load()">
