--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
   <title>Maciej</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
   <link rel="stylesheet" href="lmp.css" />
+  <link rel="stylesheet" href="map.css"/>
   <script src="advajax.js"></script>
   <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
   <script src="leaflet-measure-path.js"></script>
-  <link rel="stylesheet" href="map.css"/>
+  <script src="leaflet.browser.print.min.js"></script>
   <script src="map.js"> </script>
 </head>
 
